    - Fixes crash when a pack tech's icon is made from multiple sprites
    - Prevent productivity research from affecting recipes that don't allow it to prevent infinite loop of science generation with certain mods
  Changes:
    - Added an option for the mod to run during the final-fixes data phase to help with compatibity of certain mods
  Compatibility:
    - Added compatibility with Tenebris
    - Added compatibility with Janus
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025.01.26
  Compatibility:
    - Ignores Cerys science pack to prevent a softlock on the planet.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025.01.26
  Compatibility:
    - EditorExtensions' lab will be ignored when setting up possible researches
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025.01.24
  Minor Features:
    - Made the productivity researches unit time customizable
  Balancing:
    - Made the default productivity researches unit time shorter
    - Made the default productivity researches unit amount lower
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025.01.24
  Compatibility:
    - Added compatibility with Cerys
  Changes:
    - Reworked big parts of the code to make future modifications easier
  Ease of use:
    - Improved some texts and added a bit of color on the component icon
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025.01.09
  Features:
    - Modify each science pack's recipes to add the science pack that where required to unlock it
    - A setting is avaible to chose between adding parents recursively or only the direct parents